# hass-ac-modbus

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  hacs.json  install-monitor.sh  jest.config.ts  jest.setup.ts  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  requirements_test.txt  server-demo.js  server-enhanced-simple.js  server-enhanced.js  server.js  server.ts  tsconfig.json  turbo.json  控制.md
.changeset/: home-away-humidify.md  initial-release.md
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
app/: layout.tsx  page.tsx
components/: enhanced-register-monitor.tsx  register-monitor.tsx
config/: modbus-config.json
docs/: cross-browser-validation.md  ha-custom-integration-plan.md  performance-validation.md  testing-guide.md
examples/: enhanced-scanning-example.ts
lib/: change-detector.ts  change-event-manager.ts  change-websocket-handler.ts  data-analyzer.ts  dependency-monitors.ts  enhanced-monitor.ts  enhanced-scanner.ts  modbus-client.js  modbus-client.ts  modbus-scanner.ts  monitoring-session.ts  mqtt-bridge.ts  scan-optimizer.ts  websocket-types.ts
scripts/: smart-scan.ts  test-registers.js  test-write.js
specs/001-/: plan.md  (+4 more)
tests/: __init__.py  conftest.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_error_recovery.py  test_extensibility.py  test_hub.py  test_init.py  test_manifest.py  test_performance.py  test_select.py  test_services.py  test_switch.py  test_translations.py
types/: change-events.ts  modbus.ts
(+56 files in other folders)
